# myth

./: Cargo.toml  README.md  dprint.json
.github/workflows/: dprint.yml  lint.yml  sort.yml
crates/constants/: Cargo.toml
crates/constants/src/: domain_types.rs  lib.rs  misc.rs  withdrawal_prefixes.rs
crates/constants/src/config/: genesis.rs  mod.rs  time.rs  validator_cycle.rs
crates/constants/src/preset/: block.rs  gwei.rs  misc.rs  mod.rs  reward.rs  statelist_length.rs  time.rs
crates/types/: Cargo.toml
crates/types/src/: alias.rs  beacon_blocks.rs  beacon_operations.rs  beacon_state.rs  lib.rs  misc.rs  signed_envelopes.rs
