[package]
name = "myth"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# myth
myth_types = { path = "crates/types" }
myth_constants = { path = "crates/constants" }

# ssz
r_ssz = { git = "https://github.com/Soubhik-10/r_ssz", branch = "master" }

# alloy
alloy-primitives = "1.0.9"
